<?xml version="1.0"?>
<package format="2">
  <name>husky_highlevel_controller</name>
  <version>0.1.1</version>
  <description>The husky_highlevel_controller package</description>
  <maintainer email="yimeng.lu@kaust.edu.sa">Yimeng Lu</maintainer>
  <license>BSD</license>
  <author email="yimeng.lu@kaust.edu.sa">Yimeng Lu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_stvs</depend>
</package>
